# vivencial-opengl

./: .gitignore  CMakeLists.txt  README.md
assets/Modelos3D/: Cube.mtl
include/: Camera.h  Trajectory.h
src/: Camera.cpp  CuboInstanciado.cpp  Hello3D.cpp  Hello3D.md  Hello3DCamera.cpp  Hello3DCamera.md  Iluminado.cpp  Texturizado.cpp  Trajectory.cpp  TrajectoryDemo.cpp  main.cpp
